[package]
name = "linux-network-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/ch2/server.rs"

[[bin]]
name = "client"
path = "src/ch2/client.rs"

[dependencies]
nix = { version = "0.27.1", features = ["socket", "net"] }

